--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <mdui-top-app-bar-title>CPS 测试</mdui-top-app-bar-title>
         <div style="flex-grow: 1"></div>
         <mdui-dropdown>
-            <mdui-button-icon slot="trigger" icon="domain--two-tone"></mdui-button-icon>
+            <mdui-button-icon slot="trigger" icon="domain"></mdui-button-icon>
             <mdui-menu>
                 <mdui-menu-item onclick="window.location.href='https://hfc2307.top'">HFC2307.top</mdui-menu-item>
                 <mdui-menu-item onclick="window.location.href='https://07s.top'">07s.top</mdui-menu-item>
@@ -66,4 +66,5 @@
     <script src="./scripts/lastDialog.js"></script>
     <script src="./scripts/main.js"></script>
 </body>
+
 </html>
